# simple-gesture-classification

./: .gitignore  README.md  convert2onnx.py  convert2onnx.txt  dataset.py  model.py  norm_comp.py  preprocess.py  test.py  test.sh  trainner.py  utils.py
horizon_doc_part/ddk/doc/navigation/ai_express/docs_cn/ai_express/: README.html  genindex.html  index.html  objects.inv  release_note.html  search.html  searchindex.js
horizon_doc_part/ddk/doc/navigation/ai_express/docs_cn/model_inference/: CMakeLists.html  README.html  genindex.html  index.html  search.html  searchindex.js
horizon_doc_part/ddk/doc/navigation/ai_express/docs_cn/rtsp_server/: CMakeLists.html  README.html  objects.inv  searchindex.js
horizon_doc_part/ddk/doc/navigation/ai_express/docs_cn/rtsp_server/_sources/: CMakeLists.txt  README.md.txt
horizon_doc_part/ddk/doc/navigation/ai_express/docs_cn/solution_zoo/: README.html  objects.inv  release_note.html  searchindex.js
horizon_doc_part/ddk/doc/navigation/ai_express/docs_cn/uvc_server/: CMakeLists.html  README.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
horizon_doc_part/ddk/doc/navigation/ai_express/docs_cn/video_source/: CMakeLists.html  README.html  index.html  objects.inv  searchindex.js
horizon_doc_part/ddk/doc/navigation/ai_express/docs_cn/xproto_samples/: genindex.html  index.html  objects.inv  search.html  searchindex.js
horizon_doc_part/ddk/doc/navigation/ai_express/docs_cn/xstream_samples/: genindex.html  index.html  objects.inv  search.html  searchindex.js
horizon_doc_part/ddk/doc/navigation/ai_toolchain/docs_cn/bpu_sdk_api_doc/: .buildinfo  bpu_sdk_api_doc_cn.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
horizon_doc_part/ddk/doc/navigation/ai_toolchain/docs_cn/hb_mapper_sample_doc/: .buildinfo  .custom-style.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
horizon_doc_part/ddk/doc/navigation/ai_toolchain/docs_cn/hb_mapper_tools_guide/: .buildinfo  .custom-style.html  01_model_conversion_details.html  02_tools.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
horizon_doc_part/doc/: genindex.html  index.html  objects.inv  search.html  searchindex.js
horizon_doc_part/doc/_sources/: index.rst.txt
horizon_doc_part/doc/_sources/common_doc/: j3_soc_user_guide.rst.txt  other_sources.rst.txt  x3_sdb_overview.rst.txt  x3_soc_user_guide.rst.txt  xj3_board_command.rst.txt  xj3_board_other_docs.rst.txt  xj3_board_overview.rst.txt  xj3_board_update_guide.rst.txt  xj3_ddk_quick_start.rst.txt  xj3_ddk_sample.rst.txt  xj3_soc_contrast.md.txt  xj3_soc_other_docs.rst.txt
horizon_doc_part/doc/_sources/source_doc/: x3_ddk_docs.rst.txt  x3_ddk_user_guide.rst.txt
horizon_doc_part/doc/common_doc/: j3_soc_user_guide.html  other_sources.html  x3_sdb_overview.html  x3_soc_user_guide.html  xj3_board_command.html  xj3_board_other_docs.html  xj3_board_overview.html  xj3_board_update_guide.html  xj3_ddk_quick_start.html  xj3_ddk_sample.html  xj3_soc_contrast.html  xj3_soc_other_docs.html
horizon_doc_part/doc/source_doc/: x3_ddk_docs.html  x3_ddk_user_guide.html
(+773 files in other folders)
